Fix z-index issue messing with controls

--- a/static/styles/base.css
+++ b/static/styles/base.css
@@ -198,8 +198,8 @@ h1 {
 	text-align:center;
 }
 
-.hide {
-	/*display: none;*/
+#additional_info.hide {
+	z-index: 0;
 	opacity: 0;
 	-webkit-transition: all .25s;
 }
